# learn-model-context-protocol

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-pypi.md  README.md  SECURITY.md  dependency-management.html  examples.html  index.html  installation.html  mkdocs.yml  pyproject.toml  server.json  sitemap.xml
.github/workflows/: code-quality.yml  docs.yml  registry.yml  release.yml
assets/javascripts/: bundle.79ae519e.min.js  bundle.f55a23d4.min.js
configurations/: mcp-client.html  mcp-server.html
docs/: dependency-management.md  examples.md  index.md  installation.md  mcp-client.md
docs/configurations/: mcp-client.md  mcp-server.md
src/mcp_learning/: __init__.py  logging_bootstrap.py
src/mcp_learning/mcp_client/: __init__.py  client.py  configurations.py  console.py  llm.py  main.py  orchestrator.py  utils.py
src/mcp_learning/mcp_client/utils/: __init__.py  configurations.py  console.py  dependencies.py  log.py  monitoring.py
src/mcp_learning/mcp_server/: __init__.py  configurations.py  exponentiation.py  log.py  main.py  simplification.py
src/mcp_learning/mcp_server/arithmetic_operations/: __init__.py  derived_operations.py
src/mcp_learning/mcp_server/arithmetic_operations/axioms/: __init__.py  fundamental_operations.py  inverses.py
